# InstaRecog

./: .gitignore  LICENSE  pyproject.toml
instarecog/: facenet.py
notebooks/: FaceModel.ipynb
